@@ -1,1 +1,2 @@
+DIST magus-1.3.1.tar.bz2 7358580 SHA256 f7f118dff53b53a45d612d870bc2c9fb151d9c3aeea6f006b74fc6ab41dcb4d6 SHA512 b08231bb391d7f11c010afb0b881f063dbc1469d9032ba9ed9d3480e3d709709472a8e25d7104c5ee59f7e2fd222f417429233a9d730cb90a4538b089280e7c9 WHIRLPOOL 1b3dde3fc06e79ad80b4bc6ac34d5757ec81aa8a28fa9e82e46aa0ba9a3b30cb83d2c9ab8d8ca6f23cb51f00e978134b0646c839c0da4fa221b0fbbe4c10d522
 DIST magus-1.3.3.tar.bz2 7417528 SHA256 14d75aba616149e52252fe0f1d0bae796936295aacfb82f1f620d1efd20a8e86
