@@ -2,6 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*magus-1.3.1 (28 Dec 2014)
+
+  28 Dec 2014; Martin Väth <martin@mvath.de>:
+  Downgrade to now only public version from sourceforge.
+  Rename configure.in -> configure.ac for compatibility with current automake.
+
 *magus-1.3.3 (28 May 2011)
 
   21 Sep 2012; Martin Väth <martin@mvath.de>:
